--- a/index.qmd
+++ b/index.qmd
@@ -82,7 +82,7 @@ output:
     <td><a href="notes/06_high_dimensional_geometry.html">High-Dimensional Geometry</a></td>
     <td><a href="notes/06_high_dimensional_geometry.html">High-Dimensional Geometry</a></td>
     <td><a href="slides/Week05.pdf">Slides</a></td>
-    <td></td>
+    <td><a href="https://colab.research.google.com/drive/1HY7qkCvXM856OxkEsTJdbbgv-AZJvyqh?usp=sharing">Problem 8</a>, <a href="https://colab.research.google.com/drive/1Fyna74I7NyIELGjNG9HPTnPHmAhBt5TB?usp=sharing">Problem 9</a></td>
   </tr>
   <tr>
     <td>Week 6 (2/24 and 2/26)</td>
