--- a/index.qmd
+++ b/index.qmd
@@ -86,22 +86,22 @@ output:
   </tr>
   <tr>
     <td>Week 6 (2/24 and 2/26)</td>
-    <td><a href="notes/06_high_dimensional_geometry.html">High-Dimensional Geometry</a></td>
-    <td><a href="notes/06_high_dimensional_geometry.html">High-Dimensional Geometry</a></td>
+    <td><a href="notes/07_dimensionality_reduction.html">Dimensionality Reduction</a></td>
+    <td><a href="notes/07_dimensionality_reduction.html">Dimensionality Reduction</a></td>
     <td></td>
     <td></td>
   </tr>
   <tr>
     <td>Week 7 (3/3 and 3/5)</td>
-    <td><a href="notes/06_high_dimensional_geometry.html">High-Dimensional Geometry</a></td>
+    <td><a href="notes/08_similarity_estimation.html">Similarity Estimation</a></td>
     <td><i>Midterm Exam</i></td>
     <td></td>
     <td></td>
   </tr>
   <tr>
     <td>Week 8 (3/10 and 3/12)</td>
-    <td><a href="notes/07_dimensionality_reduction.html">Dimensionality Reduction</a></td>
-    <td><a href="notes/07_dimensionality_reduction.html">Dimensionality Reduction</a></td>
+    <td><a href="notes/08_similarity_estimation.html">Similarity Estimation</a></td>
+    <td><a href="notes/14_singular_value_decomposition.html">Singular Value Decomposition</a></td>
     <td></td>
     <td></td>
   </tr>
@@ -119,14 +119,14 @@ output:
 
   <tr>
     <td>Week 10 (3/24 and 3/26)</td>
-    <td><a href="notes/08_similarity_estimation.html">Similarity Estimation</a></td>
-    <td><a href="notes/08_similarity_estimation.html">Similarity Estimation</a></td>
+    <td><a href="notes/14_singular_value_decomposition.html">Singular Value Decomposition</a></td>
+    <td><a href="notes/15_power_method.html">Power Method</a></td>
     <td></td>
     <td></td>
   </tr>
   <tr>
     <td>Week 11 (3/31 and 4/2)</td>
-    <td><a href="notes/14_singular_value_decomposition.html">Singular Value Decomposition</a></td>
+    <td><a href="https://www.linkedin.com/in/suyogsoti">Suyog Soti's Guest Lecture</a></td>
     <td><a href="notes/14_singular_value_decomposition.html">Singular Value Decomposition</a></td>
     <td></td>
     <td></td>
@@ -147,15 +147,15 @@ output:
   </tr>
   <tr>
     <td>Week 14 (4/21 and 4/23)</td>
-    <td><a href="notes/explainable_ai.html">Explainable AI</a></td>
-    <td><a href="notes/explainable_ai.html">Explainable AI</a></td>
+    <td><a href="">Differential Privacy</a></td>
+    <td><i>Midterm Exam</i></td>
     <td></td>
     <td></td>
   </tr>
   <tr>
     <td>Week 15 (4/28 and 4/30)</td>
     <td><a href="notes/explainable_ai.html">Explainable AI</a></td>
-    <td><i>Midterm Exam</i></td>
+    <td><a href="notes/explainable_ai.html">Explainable AI</a></td>
     <td></td>
     <td></td>
   </tr>
