--- a/notes/06_high_dimensional_geometry.qmd
+++ b/notes/06_high_dimensional_geometry.qmd
@@ -258,73 +258,63 @@ So:
 <img src="images/crazy.png" width="400"/>
 </p>
 
+**Claim:** All but a $\left(\frac1{2}\right)^{c \epsilon^2 d}$ fraction of the volume of the unit ball is within $\epsilon$ of any equator for some constant $c$.
+
 Clearly, the high-dimensional unit ball looks nothing like the circle!
 
-Let's show our claim that all but a small fraction of the volume of the unit ball falls within $\epsilon$ of its equator.
-We can show this probabilistically by drawing random points from the unit ball.
-Formally, we'll show that if we draw a random point $\mathbf{x}$ from the unit ball, then $|x_1| \leq \epsilon$ with large probability.
+::: {.proof-block}
+<details open>
+<summary>Proof</summary>
+Let's show our claim that all but a small fraction of the volume of the unit ball falls within $\epsilon$ of its equator. We can show this probabilistically by drawing random points from the unit ball. Formally, we'll show that if we draw a random point $\mathbf{x}$ from the unit ball, then $|x_1| \leq \epsilon$ with large probability.
 
-Generating a random vector $\mathbf{x}$ from the interior of the unit ball is quite difficult.
-We'll instead consider a random vector $\mathbf{w}$ from the surface of the unit ball.
-Given a random vector $\mathbf{x}$ from the unit ball, we can put it onto the surface of the unit ball by normalizing it: define $\mathbf{w} = \frac{\mathbf{x}}{\|\mathbf{x}\|_2}$.
-Because $\|\mathbf{x}\|_2 \leq 1$, we know
+Generating a random vector $\mathbf{x}$ from the interior of the unit ball is quite difficult. We'll instead consider a random vector $\mathbf{w}$ from the surface of the unit ball. Given a random vector $\mathbf{x}$ from the unit ball, we can put it onto the surface of the unit ball by normalizing it: define $\mathbf{w} = \frac{\mathbf{x}}{\|\mathbf{x}\|_2}$. Because $\|\mathbf{x}\|_2 \leq 1$, we know
 \begin{align}
 \Pr( |x_1| \leq \epsilon) \geq \Pr( |w_1| \leq \epsilon).
 \end{align}
+So it suffices to show that $|w_1| \leq \epsilon$ with probability at least $1-\frac{1}{2^{c \epsilon^2 d}}$. Let's consider how to generate a random vector $\mathbf{w}$ from the surface of the unit ball.
 
-So it suffices to show that $|w_1| \leq \epsilon$ with probability at least $1-\frac1{2^{c \epsilon^2 d}}$.
-Let's consider how to generate a random vector $\mathbf{w}$ from the surface of the unit ball.
-
-### Rotational Invariance of the Gaussian
-Let $\mathbf{g} \in \mathbb{R}^d$ be a random Gaussian vector with each entry drawn from the standard normal distribution $\mathcal{N}(0,1)$.
-Then $\mathbf{w} = \frac{\mathbf{g}}{\|\mathbf{g}\|_2}$ is uniformly distributed on the surface of the unit ball.
-
-To see why, consider a probability density function $p: \mathbb{R}^d \rightarrow \mathbb{R}$, with two key properties:
+Let $\mathbf{g} \in \mathbb{R}^d$ be a random Gaussian vector with each entry drawn from the standard normal distribution $\mathcal{N}(\mathbf{0},\mathbf{I})$. Then $\mathbf{w} = \frac{\mathbf{g}}{\|\mathbf{g}\|_2}$ is uniformly distributed on the surface of the unit ball. To see why, consider a probability density function $p: \mathbb{R}^d \rightarrow \mathbb{R}$, with two key properties:
 
 * Independence: The distributions of the individual coordinates are independent.
 
-* Rotational Invariance: The joint density depends only on the distance from the origin (i.e., $p(\mathbf{x})$ is a function of $\|\mathbf{x}\|_2$).
+* Rotational Invariance: The joint density depends only on the distance from the origin i.e., $p(\mathbf{x})$ is a function of $\|\mathbf{x}\|_2$.
 
-These two properties are enough to show that $p = \exp( -\|\mathbf{w}\|_2^2)$, at least up to constants.
-For a phenomenal explanation of this derivation (often called the Herschel-Maxwell derivation), check out [this](https://www.youtube.com/watch?v=cy8r7WSuT1I&ab_channel=3Blue1Brown) 3Blue1Brown video.
+These two properties are enough to show that $p = \exp( -\|\mathbf{w}\|_2^2)$, at least up to constants. For a phenomenal explanation of this derivation (often called the Herschel-Maxwell derivation), check out [this](https://www.youtube.com/watch?v=cy8r7WSuT1I&ab_channel=3Blue1Brown) 3Blue1Brown video.
 
 In order to analyze $\mathbf{w}$, we'll first analyze $\mathbf{g}$.
+
 The expectation of $\|\mathbf{g}\|_2^2$ is d:
-\begin{align}
-\mathbb{E}[ \|\mathbf{g}\|_2^2 ]
+\begin{align}\mathbb{E}[ \|\mathbf{g}\|_2^2 ]
 = \sum_{i=1}^d \mathbb{E}[g_i^2]
 = \sum_{i=1}^d \textrm{Var}(g_i) = d.
 \end{align}
-The second equality is because each entry has mean 0 and variance 1.
 
-We will use the following inequality:
+The second equality is because each entry has mean 0 and variance 1. We will use the following inequality:
 \begin{align}
-\Pr \left(
-\| \mathbf{g} \|_2^2 \leq \frac{d}{2}
-\right)
-\leq \frac{1}{2^{c d}}
+\Pr \left(\| \mathbf{g} \|_2^2 \leq \frac{d}{2}\right)\leq \frac{1}{2^{c d}}
 \end{align}
-for some constant $c$.
-The proof uses a concentration inequality for Chi-squared variables and is left as an exercise.
+for some constant $c$. The proof uses a concentration inequality for Chi-squared variables and is left as an exercise. To bound the probability that $|w_1| \leq \epsilon$, we will define two events:
 
-We will condition on the event that $\| \mathbf{g} \|_2 \geq \sqrt{d/2}$ for the next inequality.
-Then
+1. The norm of the Gaussian vector is sufficiently large: $\| \mathbf{g} \|_2 \geq \sqrt{d/2}$.
+
+2. The first coordinate is sufficiently small: $|g_1| \leq \epsilon \sqrt{d/2}$.
+
+Notice that if both of these events occur simultaneously, our main condition is guaranteed. Since $w_1 = \frac{g_1}{\|\mathbf{g}\|_2}$, we have:
 \begin{align}
-\Pr\left( |w_1| \leq \epsilon \mid \| \mathbf{g} \|_2 \geq \sqrt{d/2}\right)
-&= \Pr\left( |w_1| \sqrt{d/2} \leq \epsilon \sqrt{d/2} \mid \| \mathbf{g} \|_2 \geq \sqrt{d/2}\right) \\
-&\geq \Pr\left( |g_1| \leq \epsilon \sqrt{d/2} \mid \| \mathbf{g} \|_2 \geq \sqrt{d/2}\right) \\
-&\geq 1 - \frac{1}{2^{\left(c \epsilon \sqrt{d/2}\right)^2}}.
+|w_1| = \frac{|g_1|}{\|\mathbf{g}\|_2} \leq \frac{\epsilon \sqrt{d/2}}{\sqrt{d/2}} = \epsilon.
 \end{align}
-The last inequality follows by the Gaussian tail bound.
-
-We need both $\| \mathbf{g} \|_2 \geq \sqrt{d/2}$ and $|g_1| < \epsilon \sqrt{d/2}$ for $|w_1| \leq \epsilon$.
-By the union bound, we have
+Therefore, the probability that $|w_1| \leq \epsilon$ is at least the probability of the intersection of these two events. By the union bound, the probability of an intersection is bounded below by $1$ minus the sum of the probabilities of the complement events:
 \begin{align}
-\Pr( |w_1| \leq \epsilon)
-\geq 1 - \frac{1}{2^{\left(c \epsilon \sqrt{d/2}\right)^2}} - \frac{1}{2^{c d}}
+\Pr( |w_1| \leq \epsilon)&\geq \Pr\left( |g_1| \leq \epsilon \sqrt{d/2} \text{ and } \| \mathbf{g} \|_2 \geq \sqrt{d/2} \right) \\
+&\geq 1 - \Pr\left( |g_1| > \epsilon \sqrt{d/2} \right) - \Pr\left( \| \mathbf{g} \|_2 < \sqrt{d/2} \right).
 \end{align}
-
+Applying the standard Gaussian tail bound to the first probability, we get $\Pr\left( |g_1| > \epsilon \sqrt{d/2} \right) \leq \frac{1}{2^{\left(c \epsilon \sqrt{d/2}\right)^2}}$. The second probability is bounded by $\frac{1}{2^{c d}}$ from the Chi-squared inequality above. Substituting these in, we have:
+\begin{align}
+\Pr( |w_1| \leq \epsilon)\geq 1 - \frac{1}{2^{\left(c \epsilon \sqrt{d/2}\right)^2}} - \frac{1}{2^{c d}}.
+\end{align}
 This proves the claim that nearly all of the volume of the unit ball falls within $\epsilon$ of its equator.
+</details>
+:::
 
 Let $\mathcal{C}_d$ be the $d$-dimensional unit cube.
 Formally,
