--- a/index.qmd
+++ b/index.qmd
@@ -88,7 +88,7 @@ output:
     <td>Week 6 (2/24 and 2/26)</td>
     <td><a href="notes/07_dimensionality_reduction.html">Dimensionality Reduction</a></td>
     <td><a href="notes/07_dimensionality_reduction.html">Dimensionality Reduction</a></td>
-    <td></td>
+    <td><a href="slides/Week06.pdf">Slides</a></td>
     <td></td>
   </tr>
   <tr>
